--- a/gui/theme/common/languages/fr.xml
+++ b/gui/theme/common/languages/fr.xml
@@ -23,7 +23,7 @@
         <string name="sdext">SD-EXT</string>
         <string name="adopted_data">Données adoptées</string>
         <string name="adopted_storage">Stockage adopté</string>
-        <string name="twrp_header">TWRP for Fly Tornado One compiled by hyperion70</string>
+        <string name="twrp_header">TWRP for Lenovo S650 ROW compiled by Hikari no Tenshi</string>
         <string name="twrp_watch_header">TWRP %tw_version%</string>
         <string name="cpu_temp">CPU : %tw_cpu_temp% &#xB0;C</string>
         <string name="battery_pct">Batterie : %tw_battery%</string>
