--- a/gui/theme/common/languages/hu.xml
+++ b/gui/theme/common/languages/hu.xml
@@ -31,7 +31,7 @@
 		<string name="adopted_storage">Adoptált tároló</string>
 
 		<!-- GUI XML strings -->
-		<string name="twrp_header">Team Win Recovery Project</string>
+		<string name="twrp_header">TWRP for Lenovo S650 ROW compiled by Hikari no Tenshi</string>
 		<string name="twrp_watch_header">TWRP %tw_version%</string>
 		<string name="cpu_temp">CPU: %tw_cpu_temp% °C</string>
 		<string name="battery_pct">Akkumulátor: %tw_battery%</string>
