Update ukrainian language

--- a/gui/theme/common/languages/uk.xml
+++ b/gui/theme/common/languages/uk.xml
@@ -243,13 +243,13 @@
 		<string name="install_image_btn">Встановити образ</string>
 		<string name="install_image_hdr">Встановити образ</string>
 		<string name="install_reboot">Перезавантаження через 5 секунд</string>
-		<string name="install_reboot_chk">Перезавантажити по завершенні втсановлення</string>
+		<string name="install_reboot_chk">Перезавантажити після завершення встановлення</string>
 		<string name="install_sel_target">Виберіть цільовий розділ</string>
 		<string name="install_select_file_hdr">Вибрати файл</string>
 		<string name="install_successful">Успішно встановлено</string>
 		<string name="install_zip_btn">Встановити Zip</string>
-		<string name="install_zip_count_hdr">Встановити Zip %tw_zip_index% з %tw_zip_queue_count%</string>
-		<string name="install_zip_hdr">Встановити Zip</string>
+		<string name="install_zip_count_hdr">Встановлення Zip %tw_zip_index% з %tw_zip_queue_count%</string>
+		<string name="install_zip_hdr">Встановлення Zip</string>
 		<string name="installing_zip_xml">Встановлення Zip: %tw_file%</string>
 		<string name="installing_zip_xml">Встановлення Zip: %tw_file%</string>
 		<string name="internal">Internal Storage</string>
@@ -259,7 +259,7 @@
 		<string name="kb_vibration">Вібрація клавіатури:</string>
 		<string name="kb_vibration_hdr">Вібрація клавіатури</string>
 		<string name="language_hdr">Мова</string>
-		<string name="lft_navbar_rdo">Left align navbar buttons</string>
+		<string name="lft_navbar_rdo">Вирівняти навігаційні кнопки зліва</string>
 		<string name="locate_backup_err">Не вдалося знайти резервну копію '{1}'</string>
 		<string name="making_dir1">Створення теки</string>
 		<string name="making_dir2">Створення теки: '{1}'</string>
@@ -273,16 +273,46 @@
 		<string name="md5_match">MD5 співпало</string>
 		<string name="md5_off">Генерування MD5 вимкнуто</string>
 		<string name="microsd">Micro SDCard</string>
+		<string name="min_queue">Досягнуто мінімальної кількості zip!</string>
 		<string name="mount_btn">Монтування</string>
+		<string name="mount_data_footer">Не вдалося змонтувати /data та не можливо виявити crypto footer.</string>
 		<string name="mount_hdr">Монтування</string>
 		<string name="mount_sel_part">Виділіть розділи для монтування:</string>
+		<string name="mount_sys_ro_chk">Монтувати системний розділ тільки для читання</string>
+		<string name="mount_sys_ro_s_chk">Монтувати System RO</string>
+		<string name="mount_usb_storage_btn">Монтувати USB накопичувач</string>
+		<string name="mounted">Змонтовано '{1}'</string>
+		<string name="mounting">Монтування</string>
+		<string name="mtp_already_enabled">MTP вже увімкнено</string>
+		<string name="mtp_crash">MTP Crashed, not starting MTP on boot.</string>
+		<string name="mtp_enabled">MTP увімкнено</string>
+		<string name="mtp_fail">Не вдалося увімкнути MTP</string>
 		<string name="name">Ім’я:</string>
+		<string name="need_new_adb">Потрібен adb 1.0.32 або новіще для sideload до цього пристрою.</string>
+		<string name="no_andsec">Не знайдено жодного розділу android secure.</string>
+		<string name="no_crypto_support">No crypto support was compiled into this build.</string>
+		<string name="no_kernel_selinux">Ядро не має підтримки для читання SELinux contexts.</string>
+		<string name="no_md5">Пропуск перевірки MD5: файл MD5 не знайдено</string>
+		<string name="no_md5_found">Не знайдено файл md5 для '{1}'. Для відновлення вимкніть опцію перевірки MD5.</string>
+		<string name="no_mtp">Підтримка MTP не включена</string>
 		<string name="no_os1">ОС не встановлено! Ви</string>
 		<string name="no_ospo">впевнені, що хочете вимкнути?</string>
 		<string name="no_osrb">впевнені, що хочете перезавантажити?</string>
+		<string name="no_part_flash">No partitions selected for flashing.</string>
+		<string name="no_part_restore">No partitions selected for restore.</string>
+		<string name="no_partition_selected">No partitions selected for backup.</string>
+		<string name="no_pwd">No password provided.</string>
+		<string name="no_real_sdcard">This device does not have a real SD Card! Aborting!</string>
+		<string name="no_selinux">No SELinux support (no libselinux).</string>
+		<string name="no_space">Not enough free space on storage.</string>
+		<string name="no_updater_binary">Could not find '{1}' in the zip file.</string>
+		<string name="ok_btn">OK</string>
 		<string name="options">Параметри:</string>
 		<string name="options_hdr">Параметри</string>
+		<string name="ors_complete">OpenRecoveryScript виконано</string>
+		<string name="ors_encrypt_restore_err">Не вдалося використати OpenRecoveryScript для відновлення зашифрованої резервної копії.</string>
 		<string name="part_backup_size">Розмір резервної копії: % % tw_partition_backup_size МБ</string>
+		<string name="part_complete">Розбиття завершено.</string>
 		<string name="part_curr_fs">Файлова система: %tw_partition_file_system%</string>
 		<string name="part_free">Вільно: % % tw_partition_free МБ</string>
 		<string name="part_mount_point">Точка монтування: %tw_partition_mount_point%</string>
@@ -291,29 +321,59 @@
 		<string name="part_present_yes">Присутні: Так</string>
 		<string name="part_removable_no">Знімні: ні</string>
 		<string name="part_removable_yes">Знімні: так</string>
+		<string name="part_sd_btn">Розбити SD Card</string>
+		<string name="part_sd_complete">Розбиття завершено</string>
+		<string name="part_sd_ext_sz">EXT розмір:</string>
+		<string name="part_sd_hdr">Розбиття SD Card</string>
+		<string name="part_sd_lose">Ви втратите всі файли на SD card!</string>
+		<string name="part_sd_m">-</string>
+		<string name="part_sd_p">+</string>
+		<string name="part_sd_s_btn">SD Card</string>
+		<string name="part_sd_swap_sz">Розмір Swap:</string>
+		<string name="part_sd_undo">Це неможливо скасувати!</string>
 		<string name="part_size">Розмір: % % tw_partition_size МБ</string>
 		<string name="part_used">Використовується: % tw_partition_used % МБ</string>
 		<string name="partition">Розділ: %tw_partition_name%</string>
+		<string name="partition_sd_locate">Не вдалося знайти пристрій для розбиття.</string>
+		<string name="partitioning_sd">Розбиття SD Card...</string>
+		<string name="partitioning_sd2">Це займе кілька хвилин.</string>
 		<string name="partitions">Розділи:</string>
 		<string name="pass_not_match">Паролі не співпадають!</string>
+		<string name="pid_error">{1} процес завершився з ПОМИЛКОЮ: {2}</string>
+		<string name="pid_signal">{1} процес завершився з сигналом: {2}</string>
 		<string name="progress">Прогрес:</string>
 		<string name="queue_hdr">Черга</string>
+		<string name="rb_bootloader_btn">Bootloader</string>
+		<string name="rb_download_btn">Download</string>
+		<string name="rb_poweroff_btn">Вимкнення</string>
+		<string name="rb_recovery_btn">Recovery</string>
+		<string name="rb_system_btn">Система</string>
 		<string name="reboot_btn">Перезавантаження</string>
+		<string name="reboot_hdr">Перезавантаження</string>
 		<string name="reboot_system_btn">Перезавантажити систему</string>
 		<string name="rebooting">Перезавантаження...</string>
 		<string name="recovery">Recovery</string>
+		<string name="recovery_commands_complete">Recovery Commands виконано</string>
+		<string name="recreate_folder_err">Не вдалося створити теку {1}.</string>
 		<string name="refresh_sizes_btn">Оновити розміри</string>
+		<string name="reload_theme_btn">Перезавантажити тему</string>
+		<string name="remove_all">Видалити всі файли у '{1}'</string>
+		<string name="remove_part_table">Видалення таблиці розділів...</string>
 		<string name="rename_backup_complete">Перейменування резервної копії завершено</string>
-		<string name="rename_backup_confirm">Перейменуйте резервну копію?</string>
+		<string name="rename_backup_confirm">Перейменувати резервну копію?</string>
 		<string name="rename_backup_confirm2">Це неможливо скасувати!</string>
-		<string name="rename_backup_hdr">Перейменуйте резервну копію</string>
+		<string name="rename_backup_hdr">Перейменування резервної копії</string>
+		<string name="rename_stock">Прейменовано файл стокового recovery в /system для попердження заміни TWRP стоковою прошивкою.</string>
 		<string name="renaming_backup">Перейменування резервної копії...</string>
 		<string name="repair_btn">Відновити файлову систему</string>
 		<string name="repair_btn_s">Відновити</string>
 		<string name="repair_change_btn">Відновити або змінити Файлову Систему</string>
 		<string name="repair_complete">Відновлення завершено</string>
 		<string name="repair_confirm">Відновити %tw_partition_name%?</string>
+		<string name="repair_not_exist">{1} не існую! Не можливо відновити!</string>
+		<string name="repair_resize">Відновлення {1} перед зміною розміру.</string>
 		<string name="repairing">Відновлення...</string>
+		<string name="repairing_using">Відновлення {1} зв киоистанням {2}...</string>
 		<string name="resize_btn">Змінити розмір файлової системи</string>
 		<string name="resize_btn_s">Змінити розмір</string>
 		<string name="resize_complete">Зміна розміру завершена</string>
@@ -322,35 +382,58 @@
 		<string name="restore_backup_date">Резервну копію зроблено %tw_restore_file_date%</string>
 		<string name="restore_btn">Відновлення</string>
 		<string name="restore_complete">Відновлення завершено</string>
+		<string name="restore_completed">[Відновлення завершено за {1} секунд]</string>
 		<string name="restore_dec_fail">Неправильний пароль, будь ласка, спробуйте ще раз!</string>
 		<string name="restore_defaults_btn">Відн. станд. знач</string>
 		<string name="restore_enable_md5_chk">Увімкнути перевірку MD5 для файлів резервних копій</string>
 		<string name="restore_enc_backup_hdr">Зашифрована Резервна копія</string>
+		<string name="restore_error">Помилка під час процесу відновлення.</string>
+		<string name="restore_folder">Тека резервних копій: '{1}'</string>
 		<string name="restore_hdr">Відновити</string>
+		<string name="restore_part_count">Відновлення розділів {1}...</string>
+		<string name="restore_part_done">[{1} готово ({2} секунд)]</string>
+		<string name="restore_read_only">Не можливо відновити {1} -- змонтовано тільки для читання.</string>
 		<string name="restore_sel_pack_fs">Виберіть пакунок для відновлення:</string>
 		<string name="restore_sel_part">Виберіть розділ для відновлення:</string>
-		<string name="restore_sel_store_hdr">Оберіть резервну копію з %tw_storage_display_name% (%tw_storage_free_size% МБ)</string>
+		<string name="restore_sel_store_hdr">Виберіть резервну копію з %tw_storage_display_name% (%tw_storage_free_size% МБ)</string>
+		<string name="restore_started">[Відновлення розпочато]</string>
+		<string name="restore_try_decrypt">Зашифрована резервна копія - Спроба дешифрування</string>
+		<string name="restore_try_decrypt_s">Спроба дешифрування</string>
+		<string name="restore_unable_locate">Не вдалося знайти розділ '{1}' для відновлення.</string>
+		<string name="restoring">Відновлення {1}...</string>
+		<string name="restoring_hdr">Відновлення</string>
 		<string name="rev_navbar_chk">Інвертована компоновка навігаційної панелі</string>
+		<string name="rht_navbar_rdo">Вирівняти навігаційні кнопки справа</string>
+		<string name="run_script">Виконання {1} сценарію...</string>
+		<string name="running_command">Виконання команди</string>
+		<string name="running_ors">Виконання OpenRecoveryScript</string>
+		<string name="running_recovery_commands">Виконання Recovery Commands</string>
+		<string name="screen_bright_na">Налаштування яскравочті не доступні</string>
 		<string name="screen_bright_slider">Яскравість: %tw_brightness_pct%%</string>
 		<string name="screen_to_na">Налаштування тайм-аута екрана недоступні</string>
 		<string name="screen_to_slider">Тайм-аут екрана в секундах:</string>
 		<string name="screen_to_slider_s">Тайм-аут екрана в секундах (0=вимкнуто): %tw_screen_timeout_secs%</string>
+		<string name="screenshot_err">Не вдалося зняти скріншот!</string>
+		<string name="screenshot_saved">Скріншот збережено до {1}</string>
 		<string name="sdcard">SDCard</string>
 		<string name="sdext">SD-EXT</string>
-		<string name="sel_act_hdr">Оберіть дію</string>
+		<string name="sel_act_hdr">Виберіть дію</string>
 		<string name="sel_backup_hdr">Виберіть резервну копію</string>
 		<string name="sel_lang_btn">Вибір мови</string>
 		<string name="sel_part_backup">Вибрати Розділ для Резервного Копіювання:</string>
-		<string name="sel_part_hdr">Оберіть розділ</string>
+		<string name="sel_part_hdr">Виберіть розділ</string>
 		<string name="sel_part_wipe">Виберіть розділи для очищення:</string>
+		<string name="sel_storage_list">Виберіть сховище</string>
 		<string name="sel_tz_list">Виберіть часовий пояс:</string>
 		<string name="sel_tz_offset">Виберіть зміщення (зазвичай 0): %tw_time_zone_guioffset%</string>
+		<string name="select_backup_opt">Налаштування параметрів резервного копіювання:</string>
 		<string name="select_file_from_storage">Виберіть файл з %tw_storage_display_name% (%tw_storage_free_size% МБ)</string>
 		<string name="select_language">Вибір мови:</string>
-		<string name="select_storage_btn">Обрати сховище</string>
-		<string name="select_storage_hdr">Обрати сховище</string>
+		<string name="select_storage_btn">Вибір сховища</string>
+		<string name="select_storage_hdr">Вибір сховища</string>
 		<string name="select_type_hdr">Вибрати тип</string>
 		<string name="set_language_btn">Встан. мову</string>
+		<string name="set_restore_opt">Налаштування параметрів відновлення: '{1}':</string>
 		<string name="set_tz_btn">Встан. час. пояс</string>
 		<string name="settings_btn">Налаштування</string>
 		<string name="settings_gen_btn">Загальні</string>
@@ -414,12 +497,30 @@
 		<string name="use_dst_chk">Використовувати літній час (DST)</string>
 		<string name="use_rmrf_chk">Використовувати rm -rf замість форматування</string>
 		<string name="use24clock_chk">Використовувати 24-годинний формат годинника</string>
+		<string name="utc0">(UTC+0) Лондон, Дублін, Лісабон</string>
+		<string name="utcm1">(UTC-1) Азорські острови, Кабо-Верде</string>
 		<string name="utcm10">(UTC-10) Гаваї</string>
 		<string name="utcm11">(UTC-11) Самоа, Острів Мідвей</string>
+		<string name="utcm2">(UTC-2) Середньоатлантичний час</string>
+		<string name="utcm3">(UTC-3) Бразіліа, Буенос-Айрес</string>
+		<string name="utcm4">(UTC-4) Атлантичний час</string>
+		<string name="utcm5">(UTC-5) Північноамериканський східний час</string>
 		<string name="utcm6">(UTC-6) Центральний час</string>
 		<string name="utcm7">(UTC-7) Гірський час</string>
-		<string name="utcm8">(UTC-8) Тихоокеанський час</string>
+		<string name="utcm8">(UTC-8) Північноамериканський тихоокеанський час</string>
 		<string name="utcm9">(UTC-9) Аляска</string>
+		<string name="utcp1">(UTC+1) Берлін, Брюссель, Париж</string>
+		<string name="utcp10">(UTC+10) Східна Австралія, Гуам</string>
+		<string name="utcp11">(UTC+11) Владивосток, Соломонові острови</string>
+		<string name="utcp12">(UTC+12) Окленд, Веллінгтон, Фіджі</string>
+		<string name="utcp2">(UTC+2) Афіни, Стамбул, Південна Африка</string>
+		<string name="utcp3">(UTC+3) Москва, Багдад</string>
+		<string name="utcp4">(UTC+4) Абу-Дабі, Тбілісі, Маскат</string>
+		<string name="utcp5">(UTC+5) Єкатеринбург, Ісламабад</string>
+		<string name="utcp6">(UTC+6) Алмати, Дакка, Коломбо</string>
+		<string name="utcp7">(UTC+7) Бангкок, Ханой, Джакарта</string>
+		<string name="utcp8">(UTC+8) Пекін, Сінгапур, Гонконг</string>
+		<string name="utcp9">(UTC+9) Токіо, Сеул, Якутск</string>
 		<string name="vendor">Vendor</string>
 		<string name="vendor_image">Vendor Image</string>
 		<string name="vibration_hdr">Вібрація</string>
@@ -443,6 +544,7 @@
 		<string name="zip_queue_count_s">Файл %tw_zip_queue_count% з 10:</string>
 		<string name="zip_sig_chk">Перевірка підпису Zip</string>
 		<string name="zip_warn1">Ця операція може встановити несумісні</string>
+
 
 	</resources>
 </language>
