Update ukrainian language

--- a/gui/theme/common/languages/uk.xml
+++ b/gui/theme/common/languages/uk.xml
@@ -517,19 +517,18 @@
 		<string name="swipe_unlock">   Розблокувати</string>
 		<string name="swipe_wipe">Потягніть, щоб очистити</string>
 		<string name="swipe_wipe_s">   Очистити</string>
-		<string name="sys_ro_hdr">Unmodified System Partition</string>
-		<string name="sys_ro_keep">Keep System Read only?</string>
-		<string name="sys_ro_keep_ro_btn">Keep Read Only</string>
-		<string name="sys_ro_never_show_chk">Never show this screen during boot again</string>
-		<string name="sys_rol1">TWRP can leave your system partition unmodified to make it easier for you to take official updates.</string>
-		<string name="sys_rol2">TWRP will be unable to prevent the stock ROM from replacing TWRP and will not offer to root your device.</string>
-		<string name="sys_rol3">Installing zips or performing adb operations may still modify the system partition.</string>
-		<string name="sys_rop1">TWRP can leave your system partition unmodified</string>
-		<string name="sys_rop2">to make it easier for you to take official updates.</string>
-		<string name="sys_rop3">TWRP will be unable to prevent the stock ROM from</string>
-		<string name="sys_rop4">replacing TWRP and will not offer to root your device.</string>
-		<string name="sys_rop5">Installing zips or performing adb operations may still</string>
-		<string name="sys_rop6">modify the system partition.</string>
+		<string name="sys_ro_keep">Залишити System тільки для читання?</string>
+		<string name="sys_ro_keep_ro_btn">Залишити тільки для читання</string>
+		<string name="sys_ro_never_show_chk">Ніколи не показувати цей екран знову під час завантаження</string>
+		<string name="sys_rol1">TWRP може залишити ваш системний розділ немодифіковним, щоб спростити отримання офіційних оновлень.</string>
+		<string name="sys_rol2">TWRP не зможе запобігти заміні TWRP стоковою прошивкою і не буде пропонувати рутувати пристрій.</string>
+		<string name="sys_rol3">Встановлення файлів zip або виконання операцій adb все ще може змінити системний розділ.</string>
+		<string name="sys_rop1">TWRP може залишити ваш системний розділ немодифіковуваним,</string>
+		<string name="sys_rop2">щоб спростити отримання офіційних оновлень.</string>
+		<string name="sys_rop3">TWRP не зможе запобігти заміні TWRP стоковою прошивкою</string>
+		<string name="sys_rop4">і не буде пропонувати рутувати пристрій.</string>
+		<string name="sys_rop5">Встановлення файлів zip або виконання операцій adb</string>
+		<string name="sys_rop6">все ще може змінити системний розділ.</string>
 		<string name="system">System</string>
 		<string name="system_image">System Image</string>
 		<string name="tab_backup">РЕЗЕРВНЕ КОПІЮВАННЯ</string>
@@ -547,8 +546,8 @@
 		<string name="terminal_btn">Термінал</string>
 		<string name="theme_ver_err">Версія сторонньої теми не відповідає версії TWRP. Застосована стандартна тема.</string>
 		<string name="time_zone_hdr">Часовий пояс</string>
-		<string name="too_many_flash">Too many partitions selected for flashing.</string>
-		<string name="total_backed_size">[{1} MB TOTAL BACKED UP]</string>
+		<string name="too_many_flash">Занадто багато розділів вибрано для прошивки.</string>
+		<string name="total_backed_size">[Виконано резервне копіювання розміром {1} МБ]</string>
 		<string name="total_backup_size"> * Загальний обсяг даних: {1} МБ</string>
 		<string name="total_partitions_backup"> * Загальна кількість розділів для резервного копіювання: {1}</string>
 		<string name="total_restore_size">Загальний розмір відновлення {1} МБ</string>
@@ -560,19 +559,19 @@
 		<string name="tz_offset_30">30</string>
 		<string name="tz_offset_45">45</string>
 		<string name="tz_offset_none">Немає</string>
-		<string name="unable_find_part_path">Unable to find partition for path '{1}'</string>
-		<string name="unable_locate_part_backup_name">Unable to locate partition by backup name: '{1}'</string>
-		<string name="unable_locate_storage">Unable to locate storage device.</string>
+		<string name="unable_find_part_path">Не вдалося знайти розділ для шляху '{1}'</string>
+		<string name="unable_locate_part_backup_name">Не вдалося знайти розділ по назві резервної копії: '{1}'</string>
+		<string name="unable_locate_storage">Не вдалося знайти пристрій зберігання.</string>
 		<string name="unable_repair">Не вдалося відновити {1}.</string>
 		<string name="unable_resize">Не вдалося змінити розмір {1}.</string>
 		<string name="unable_rm_part">Не вдалося видалити таблицю розділів.</string>
 		<string name="unable_to_create_part">Не вдалося створити розділ {1}.</string>
-		<string name="unable_to_decrypt">Unable to decrypt with default password. You may need to perform a Format Data.</string>
-		<string name="unable_to_locate">Unable to locate {1}.</string>
-		<string name="unable_to_locate_partition">Unable to locate '{1}' partition for backup calculations.</string>
-		<string name="unable_to_mount">Unable to mount {1}</string>
-		<string name="unable_to_mount_internal">Unable to mount internal_storage</string>
-		<string name="unable_to_mount_storage">Unable to mount storage</string>
+		<string name="unable_to_decrypt">Не вдалося дешифрувати за допомогою типового паролю. Можливо, вам буде потрібно виконати форматування Data.</string>
+		<string name="unable_to_locate">Не вдалося знайти {1}.</string>
+		<string name="unable_to_locate_partition">Не вдалося знайти розділ '{1}' для розрахунку резервного копіювання.</string>
+		<string name="unable_to_mount">Не вдалося монтувати {1}</string>
+		<string name="unable_to_mount_internal">Не вдалося монтувати internal_storage</string>
+		<string name="unable_to_mount_storage">Не вдалося монтувати сховище</string>
 		<string name="unable_to_open">Не вдалося відкрити '{1}'.</string>
 		<string name="unable_to_wipe">Не вдалося очистити {1}.</string>
 		<string name="unmount_btn">Демонтувати</string>
@@ -583,8 +582,8 @@
 		<string name="update_part_details_done">…готово</string>
 		<string name="updating_system_details">Оновлення відомостей про систему</string>
 		<string name="usb_stor_mnt1">USB сховище змонтовано</string>
-		<string name="usb_stor_mnt2">Be sure to safely remove your device</string>
-		<string name="usb_stor_mnt3">from your computer before unmounting!</string>
+		<string name="usb_stor_mnt2">Обов’язково безпечно відключіть пристрій</string>
+		<string name="usb_stor_mnt3">від ПК перед його демонтуванням!</string>
 		<string name="usb_storage_hdr">USB сховище</string>
 		<string name="usbotg">USB OTG</string>
 		<string name="use_dst_chk">Використовувати літній час (DST)</string>
@@ -649,7 +648,7 @@
 		<string name="zip_sig_chk">Перевірка підпису Zip</string>
 		<string name="zip_warn1">Ця операція може встановити несумісне програмне забезпечення</string>
 		<string name="zip_warn2">і зробити Ваш пристрій непридатним для використання.</string>
-		<string name="zip_wipe_cache">One or more zip requested a cache wipe -- Wiping cache now.</string>
+		<string name="zip_wipe_cache">Один або більше файлів zip запросили очищення cache -- Виконую очищення cache.</string>
 
 	</resources>
 </language>
